--- a/pagoprop/templates/pagoprop/dashboard.html
+++ b/pagoprop/templates/pagoprop/dashboard.html
@@ -49,8 +49,8 @@
                 <div class="card text-center shadow">
                     <div class="card-body">
                         <h5 class="card-title">Mis Apartamentos</h5>
-                        <p class="card-text display-4">0</p>
-                        <a href="#" class="btn btn-primary">Ver más</a>
+                        <p class="card-text display-4">{{ total_apartamentos }}</p>
+                        <a href="{% url 'mis_apartamentos' %}" class="btn btn-primary">Ver más</a>
                     </div>
                 </div>
             </div>
