--- a/pagoprop/templates/pagoprop/dashboard.html
+++ b/pagoprop/templates/pagoprop/dashboard.html
@@ -59,8 +59,9 @@
                 <div class="card text-center shadow">
                     <div class="card-body">
                         <h5 class="card-title">Comprobantes</h5>
-                        <p class="card-text display-4">0</p>
-                        <a href="#" class="btn btn-success">Subir nuevo</a>
+                        <p class="card-text display-4">{{ total_comprobantes }}</p>
+                        <a href="{% url 'mis_comprobantes' %}" class="btn btn-info">Ver todos</a>
+                        <a href="{% url 'subir_comprobante' %}" class="btn btn-success">Subir nuevo</a>
                     </div>
                 </div>
             </div>
