correcion navbar, validacion archivo y separador en los montos, boton eliminar con funcional modal y eliminar archivo fisico implementada

--- a/pagoprop/templates/pagoprop/subir_comprobante.html
+++ b/pagoprop/templates/pagoprop/subir_comprobante.html
@@ -61,7 +61,7 @@
                         <button type="submit" class="btn btn-success btn-lg">
                             ✓ Subir Comprobante
                         </button>
-                        <a href="{% url 'mis_comprobantes' %}" class="btn btn-secondary">
+                        <a href="{% url 'dashboard' %}" class="btn btn-secondary">
                             ← Cancelar
                         </a>
                     </div>
