--- a/pagoprop/templates/pagoprop/herencia.html
+++ b/pagoprop/templates/pagoprop/herencia.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <!-- 🧭 Navbar común para todas las páginas -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -18,8 +17,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <!-- ✅ Agregamos d-flex align-items-center al ul para nivelar todo -->
+                <ul class="navbar-nav ms-auto d-flex align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
@@ -29,18 +30,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'mis_comprobantes' %}">Mis Comprobantes</a>
                     </li>
-                    <li class="nav-item">
-                        <span class="navbar-text text-white me-3">
+
+                    <!-- Texto de saludo -->
+                    <li class="nav-item ms-3">
+                        <span class="navbar-text text-white">
                             Hola, {{ user.first_name }}
                         </span>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light btn-sm" href="{% url 'logout' %}">Cerrar Sesión</a>
+
+                    <!-- Botón de cerrar sesión (nivelado automáticamente) -->
+                    <li class="nav-item ms-3">
+                        <a class="btn btn-outline-light btn-sm d-flex align-items-center" href="{% url 'logout' %}">
+                            Cerrar Sesión
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <!-- 📦 Aquí irá el contenido de cada página -->
     <div class="container mt-5">
