--- a/pagoprop/templates/pagoprop/mis_comprobantes.html
+++ b/pagoprop/templates/pagoprop/mis_comprobantes.html
@@ -66,7 +66,9 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a href="#" class="btn btn-sm btn-warning" title="Editar">
+                            <a href="{% url 'editar_comprobante' comprobante.comprobanteID %}" 
+                            class="btn btn-sm btn-warning" 
+                            title="Editar">
                                 ✏️
                             </a>
                             <a href="#" class="btn btn-sm btn-danger" title="Eliminar" data-bs-toggle="modal"
