--- a/pagoprop/templates/pagoprop/dashboard.html
+++ b/pagoprop/templates/pagoprop/dashboard.html
@@ -26,6 +26,7 @@
     <div class="col-md-4 mb-4">
         <div class="card text-center shadow">
             <div class="card-body">
+                <i class="fas fa-building fa-3x text-primary mb-3"></i>
                 <h5 class="card-title">Mis Apartamentos</h5>
                 <p class="card-text display-4">{{ total_apartamentos }}</p>
                 <a href="{% url 'mis_apartamentos' %}" class="btn btn-primary">Ver más</a>
@@ -36,6 +37,7 @@
     <div class="col-md-4 mb-4">
         <div class="card text-center shadow">
             <div class="card-body">
+                <i class="fas fa-file-invoice-dollar fa-3x text-success mb-3"></i>
                 <h5 class="card-title">Comprobantes</h5>
                 <p class="card-text display-4">{{ total_comprobantes }}</p>
                 <a href="{% url 'mis_comprobantes' %}" class="btn btn-info">Ver todos</a>
@@ -47,6 +49,7 @@
     <div class="col-md-4 mb-4">
         <div class="card text-center shadow">
             <div class="card-body">
+                <i class="fas fa-comments fa-3x text-warning mb-3"></i>
                 <h5 class="card-title">PQRS</h5>
                 <p class="card-text display-4">0</p>
                 <a href="#" class="btn btn-warning">Crear PQRS</a>
